--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 VITE_SITE_NAME="HIMALAY"
+
+VITE_SOCIAL_TELEGRAM="#"
+VITE_SOCIAL_GITHUB="https://github.com/5hailesh-p"
+VITE_SOCIAL_FACEBOOK="#"
+VITE_SOCIAL_INSTAGRAM="#"
+VITE_SOCIAL_YOUTUBE="#"
